# adls-mcp-server

./: .env.example  README.md  pyproject.toml
.github/workflows/: publish.yml
src/adls2_mcp_server/: client.py
src/adls2_mcp_server/tools/: directories.py  files.py  filesystems.py
