[project]
name = "adls2-mcp-server"
version = "0.1.0"
description = "Azure Data Lake Storage Gen2 Model Context Protocol (MCP) service"
authors = [
    { name = "Erik Howard", email = "erikhoward@pm.me" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.21.0",
    "azure-storage-file-datalake>=12.20.0",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
adls2-mcp-server = "adls2_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adls2_mcp_server"]
